--- a/style/styles.css
+++ b/style/styles.css
@@ -7,6 +7,7 @@
   padding: 0;
 }
 body {
+  margin-left: 2px;
   font-family: "Poppins", sans-serif;
   background-color: #ffffff;
 }
@@ -85,6 +86,11 @@ nav li:hover {
   transition: font-size 2s ease;
   text-align: center;
 }
+.detail-container:hover .image-container {
+  transform: scale(1.1);
+
+  transition: transform 2s ease-in-out;
+}
 .button-link-container {
   background-color: #e02c6d;
   padding: 10px 24px;
@@ -95,12 +101,16 @@ nav li:hover {
 }
 
 /* topplayer */
+.container {
+  margin-left: 20px;
+}
 
 .players {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  margin: 25px auto;
+  /* margin: 25px auto; */
+  margin-top: 70px;
 }
 .player {
   margin: auto 80px;
@@ -108,6 +118,7 @@ nav li:hover {
   border-radius: 10px;
   box-shadow: 1px 1px 7px lightgray;
   margin-bottom: 20px;
+  margin-right: 30px;
 }
 .player-banner {
   width: 92%;
@@ -117,7 +128,15 @@ nav li:hover {
   margin: 4% 4% auto 4%;
   display: inline-block;
 }
-player-details {
+.player:hover {
+  background-color: lightseagreen;
+}
+.player:hover .player-banner {
+  transform: scale(0.5);
+
+  transition: transform 2s ease-in-out;
+}
+.player-details {
   width: 92%;
   margin: 0px 4% auto 4%;
 }
@@ -126,10 +145,17 @@ player-details {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: #6c6c6c;
+  font-size: 16px;
   margin-bottom: 20px;
+  padding: 15px;
 }
 .player-name {
-  font-size: 19px;
-  font-weight: 500;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 28px;
+  font-weight: bold;
   margin-top: 10px;
+  padding: 15px;
 }
