--- a/style/styles.css
+++ b/style/styles.css
@@ -7,7 +7,7 @@
   padding: 0;
 }
 body {
-  margin-left: 2px;
+  margin-left: 0px;
   font-family: "Poppins", sans-serif;
   background-color: #ffffff;
 }
@@ -19,7 +19,7 @@ main {
 
 /* toppart style */
 .header-container {
-  width: 1440px;
+  width: 100%;
   height: 677px;
 
   background-color: #2d25a0;
@@ -106,33 +106,41 @@ nav li:hover {
 }
 
 .players {
-  width: 100%;
+  width: 90%;
+
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   /* margin: 25px auto; */
-  margin-top: 70px;
+  margin: 70px auto 0;
+}
+.players {
+  width: 90%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 20px;
+  margin: 0 auto;
 }
 .player {
-  margin: auto 80px;
-  background-color: rgb(255, 255, 255);
+  min-height: 300px;
+  margin: 30px 40px;
+  padding: 20px;
+  background-color: rgb(219, 221, 221);
   border-radius: 10px;
-  box-shadow: 1px 1px 7px lightgray;
-  margin-bottom: 20px;
-  margin-right: 30px;
-}
-.player-banner {
-  width: 92%;
+  box-shadow: 5px 5px 8px gray;
 }
 .player .player-banner img {
   width: 100%;
-  margin: 4% 4% auto 4%;
-  display: inline-block;
+  border-radius: 10px;
 }
+.player .player-detail p {
+  font-size: 14px;
+}
+
 .player:hover {
   background-color: lightseagreen;
 }
 .player:hover .player-banner {
-  transform: scale(0.5);
+  transform: scale(0.9);
 
   transition: transform 2s ease-in-out;
 }
@@ -158,4 +166,167 @@ nav li:hover {
   font-weight: bold;
   margin-top: 10px;
   padding: 15px;
+}
+
+/* all highlight */
+.highlights-title-container {
+  padding-top: 121px;
+
+  padding-left: 156px;
+}
+.highlights-title-container h1 {
+  display: flex;
+
+  color: #070707;
+
+  font-size: 64px;
+  justify-content: space-between;
+  align-items: center;
+}
+.hightlights-image-container img {
+  width: 556.01px;
+  height: 438px;
+  margin-left: 69px;
+  margin-right: 56px;
+  margin-top: 80px;
+}
+
+/* footer style */
+.footer-container {
+  text-align: center;
+}
+.logo-container img {
+  width: 483.87px;
+  height: 110px;
+  margin-top: 158px;
+}
+.icon-container i {
+  font: 100px;
+  color: lightslategray;
+  background-color: lightskyblue;
+  border: 8px solid lightgrey;
+  border-radius: 30px;
+}
+.copyright-container {
+  font-size: 18px;
+}
+/* 
+teams style */
+.teams-container {
+  width: 870px;
+  padding: 30px;
+  border-radius: 5px;
+  margin-top: 21px;
+}
+.top-teams {
+  margin-bottom: 30px;
+}
+.teams-title {
+  color: rgb(12, 5, 53);
+  font-size: 35px;
+  margin-top: 15px;
+  padding-bottom: 5px;
+
+  text-align: center;
+}
+.teams {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  /* grid-template-columns: 1fr 1fr 1fr; */
+  grid-row-gap: 30px;
+}
+.team {
+  display: flex;
+  align-items: center;
+}
+.team img {
+  width: 100px;
+  height: 100px;
+}
+.team-name {
+  margin-left: 10px;
+  font-size: 24px;
+}
+/* Gallery */
+
+.photo-album {
+  display: flex;
+  flex-wrap: wrap;
+}
+.gallery-title {
+  color: rgb(12, 5, 53);
+  font-size: 35px;
+  margin-top: 15px;
+  padding-bottom: 5px;
+
+  text-align: center;
+}
+.photo-frame {
+  width: 300px;
+  height: 150px;
+
+  border-radius: 10px;
+  position: relative;
+  margin: 15px;
+  overflow: hidden;
+}
+.photo img {
+  width: 100%;
+
+  border-radius: 10px;
+}
+.photo-detail {
+  display: none;
+  position: absolute;
+  width: 300px;
+  top: 0;
+}
+.photo-detail h3 {
+  background-color: black;
+  color: white;
+}
+.photo-frame:hover .photo-detail {
+  display: block;
+  background-color: rgba(206, 190, 149, 0.5);
+}
+.photo-frame:hover .photo {
+  transform: scale(1.5);
+  /* transform: scale(1.5) skew(60deg); */
+  transition: transform 2s ease-in-out;
+}
+
+/*---------------------------
+           Media Queries
+-------------------------- */
+
+/* Mobile Devices */
+
+@media only screen and (max-width: 688px) {
+  .header-container {
+    width: 688px;
+    height: 1000px;
+  }
+  .nav-container {
+    display: none;
+  }
+  .detail-container {
+    display: grid;
+    flex-direction: column;
+  }
+
+  .players,
+  .teams,
+  .photo-frame {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .player,
+  .team,
+  .photo {
+    flex-direction: column;
+  }
+  .footer-container {
+    width: 100%;
+    text-align: center;
+  }
 }
