--- a/style/styles.css
+++ b/style/styles.css
@@ -29,7 +29,7 @@ main {
   padding-left: 120px;
 }
 .nav-container i {
-  margin-right: 10px;
+  padding-right: 5px;
 }
 nav ul {
   display: flex;
@@ -320,17 +320,12 @@ teams style */
 
     width: 100%;
   }
-  .container {
-    width: 330px;
-    height: 4458px;
-  }
 
   .header-title-container p {
     font-size: 36px;
     margin: 0;
     width: 100%;
   }
-
   .highlights-title-container h1 {
     font-size: 36px;
     margin-left: 30px;
@@ -345,10 +340,7 @@ teams style */
     width: 300px;
     height: 250px;
   }
-  .hightlights-image-container img {
-    width: 300px;
-    height: 250px;
-  }
+
   .players,
   .teams,
   .photo-frame {
